# DIGR

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RULE_SPEC.md  RULE_TEMPLATE.md  Rule_Test.yaml
.github/workflows/: ci.yml
non-none-fields/: Cargo.toml
non-none-fields/src/: lib.rs
non_none_fields/: Cargo.toml
non_none_fields/src/: lib.rs
non_none_fields/tests/: test.rs
src/: main.rs  rules_path.rs  rules_spec.rs  test_fns.rs
test_rules/: image-alt.yaml
testrules/: rule1.yaml
tests/: test.rs
tests/test_non_fields/: test_derive.rs
