[package]
name = "digr"
version = "0.1.0"
authors = ["the DIGR authors"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3.15"
scraper = "0.12.0"
smol = "0.3.2"
surf = "1.0.3"
anyhow = "1.0.31"
non_none_fields = { path = "./non_none_fields" }

[dev-dependencies]
trybuild = "1.0"
